# cosmic_python

./: .cruft.json  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cosmic_python/: _01_domain_model.py  _02_repository.py  _03_abstractions.py  __init__.py  app.py  config.py  flask_app.py  orm.py  repository.py  services.py
cosmic_python/_01_domain_model/: batch.py
cosmic_python/adapters/: orm.py  repository.py
cosmic_python/entrypoints/: flask_app.py
cosmic_python/service_layer/: services.py  unit_of_work.py
data/: .gitignore
tests/: __init__.py  conftest.py  test_01_domain_model.py  test_02_repository.py  test_03_abstractions.py  test_04_api.py  test_04_services.py  test_dummy.py
tests/e2e/: test_04_api.py  test_api.py
tests/integration/: test_02_repository.py  test_orm.py  test_repository.py  test_uow.py
tests/unit/: test_04_services.py  test_domain_model.py  test_services.py
